--- a/package.json
+++ b/package.json
@@ -40,7 +40,9 @@
   "dependencies": {
     "@openzeppelin/contracts": "4.3.0",
     "abdk-libraries-solidity": "^3.0.0",
-    "base64-sol": "^1.1.0"
+    "base64-sol": "^1.1.0",
+    "chai-as-promised": "^7.1.1",
+    "chai-bn": "^0.3.1"
   },
   "scripts": {
     "compile": "hardhat compile",
